robballen75-Salesforce/4-7-15/src/objects/DownloadFile__c.object
<CustomObject>
    <description>Files that can be downloaded from the web site</description>
    <fields>
        <fullName>ActiveFile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the file Active for downloads?</description>
        <label>ActiveFile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadType__c</fullName>
        <label>DownloadType</label>
        <picklist>
            <picklistValues>
                <fullName>bin</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>doc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <description>Name of the file</description>
        <label>FileName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyFile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a legacy (non-current) file?</description>
        <label>LegacyFile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ProductCode that will tag this downloadfile</description>
        <label>ProductCode</label>
        <referenceTo>ProductCode__c</referenceTo>
        <relationshipLabel>DownloadFiles</relationshipLabel>
        <relationshipName>DownloadFiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordID-18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SitecoreID__c</fullName>
        <description>Sitecore Item ID from Media Library</description>
        <label>SitecoreID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DownloadFile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DownloadFiles_View</fullName>
        <columns>RecordID_18__c</columns>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>FileName__c</columns>
        <columns>ActiveFile__c</columns>
        <columns>LegacyFile__c</columns>
        <columns>DownloadType__c</columns>
        <filterScope>Everything</filterScope>
        <label>DownloadFiles-View</label>
    </listViews>
    <nameField>
        <label>DownloadFile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DownloadFiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>